--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
   "environments": {
     "review": {
       "scripts": {
-        "postdeploy": "postdeploy.sh"
+        "postdeploy": "bash postdeploy.sh"
       }
     }
   }
